--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="jumbotron text-center">
       <img src="img/WhatsApp Image 2024-08-05 at 23.06.56.jpeg" alt="Dimas Fathurrahman" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Dimas Fathurrahman</h1>
-      <p class="lead">Drafter | Desain Interior</p>
+      <p class="lead">Drafter | Illustrator</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
