--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Dimas Fathurrahman</a>
+        <a class="navbar-brand text-white" href="#">Dimas Fathurrahman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#projects">Projects</a>
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link active text-white" aria-current="page" href="#home">Home</a>
+            <a class="nav-link text-white" href="#about">About</a>
+            <a class="nav-link text-white" href="#projects">Projects</a>
+            <a class="nav-link text-white" href="#contact">Contact</a>
           </div>
         </div>
       </div>
@@ -41,9 +41,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/WhatsApp Image 2024-08-05 at 23.06.56.jpeg" alt="Dimas Fathurrahman" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Dimas Fathurrahman</h1>
-      <p class="lead">Drafter | Illustrator</p>
+      <img src="img/WhatsApp Image 2024-09-01 at 20.33.20.jpeg" alt="Dimas Fathurrahman" width="200" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 text-white">Dimas Fathurrahman</h1>
+      <p class="lead text-white">Illustrator</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -57,18 +57,18 @@
     <!-- About -->
     <section id="about">
       <div class="container" data-aos="fade-up" data-aos-offset="250" data-aos-duration="500" data-aos-delay="100">
-        <div class="row text-center pt-1 mb-3">
+        <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus labore minima mollitia necessitatibus consequuntur provident aut ratione, unde quae distinctio!.</div>
+          <div class="col-md-4">Hello, As a fresh graduate with a background in graphic design and information modeling, I am skilled in using Canva to create engaging visual designs. I am eager to bring my creativity, attention to detail, and enthusiasm for learning and adapting to a dynamic environment.</div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#e2edff"
+          fill="#343A40"
           fill-opacity="1"
           d="M0,192L40,181.3C80,171,160,149,240,160C320,171,400,213,480,224C560,235,640,213,720,170.7C800,128,880,64,960,80C1040,96,1120,192,1200,229.3C1280,267,1360,245,1400,234.7L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -80,48 +80,32 @@
     <section id="projects">
       <div class="container">
         <div class="row text-center pb-5">
-          <div class="col">
+          <div class="col text-white">
             <h2>My Projects</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500">
-              <img src="img/projects/1.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/projects/1.Moon & Wolf.jpeg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">A lone wolf standing watch under the moonlight.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="Project 2" />
+              <img src="img/projects/2.flower.jpeg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Balance between simplicity and complexity.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
-              <img src="img/projects/3.jpg" class="card-img-top" alt="Project 3" />
+              <img src="img/projects/3.abstrak.jpeg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
-              <img src="img/projects/4.jpg" class="card-img-top" alt="Project 4" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <img src="img/projects/5.jpg" class="card-img-top" alt="Project 5" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Dynamic energy flow in the darkness.</p>
               </div>
             </div>
           </div>
@@ -164,7 +148,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-Kirim" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="240">Kirim</button>
+              <button type="submit" class="btn btn-success btn-Kirim" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="240">Kirim</button>
 
               <button class="btn btn-primary btn-Loading d-none" type="button" disabled>
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -176,7 +160,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#0d6efd"
+          fill="#212529"
           fill-opacity="1"
           d="M0,160L48,176C96,192,192,224,288,213.3C384,203,480,149,576,154.7C672,160,768,224,864,240C960,256,1056,224,1152,202.7C1248,181,1344,171,1392,165.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
@@ -185,7 +169,7 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-dark text-white text-center pb-5">
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/thrhmn_/" class="text-white fw-bold text-center">Dimas Fathurrahman</a></p>
     </footer>
     <!-- Akhir Footer -->
